init deem java-mod's